...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Profile Name"
                android:textSize="22sp"
...
                android:layout_height="wrap_content"
                android:text="About"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:minHeight="80dp"
                android:text="Bio info"
                android:textSize="14sp" />
...
